# mwe-cuda-oxide-bugs

./: Cargo.toml  README.md  WRITEUP.md  rust-toolchain.toml
bug-a-tuple-return/: Cargo.toml  build.rs
bug-a-tuple-return/src/: main.rs
bug-b-cross-file/: Cargo.toml  build.rs
bug-b-cross-file/src/: helpers.rs  main.rs
patches/: patch-a-tuple-return.diff  patch-b-cross-file-PLAN.md  patch-b-cross-file.diff
